--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,6 @@ target_include_directories(test_test PUBLIC "${PROJECT_SOURCE_DIR}")
 configure_file(MonkeyCompilerConfig.h.in MonkeyCompilerConfig.h)
 add_executable(test_configure_file test/cmake/main.cpp)
 target_include_directories(test_configure_file PUBLIC "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}")
+
+add_executable(test_lexer test/lexer/main.cpp lexer/lexer.cpp lexer/token.cpp)
+target_include_directories(test_lexer PUBLIC "${PROJECT_SOURCE_DIR}")
