--- a/parser/CMakeLists.txt
+++ b/parser/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(lexer lexer.cpp token.cpp)
+add_library(parser node.cpp)
 target_include_directories(lexer INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
