add test parse LetStmt

--- a/parser/CMakeLists.txt
+++ b/parser/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(parser parser.cpp)
-target_include_directories(lexer INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(parser INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
