--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ target_link_libraries(test_lexer PUBLIC lexer)
 
 add_executable(test_parser test/parser/main.cpp)
 target_include_directories(test_parser PUBLIC ${PROJECT_SOURCE_DIR})
-target_link_libraries(test_parser PUBLIC parser)
+target_link_libraries(test_parser PUBLIC lexer ast parser)
 
 enable_testing()
 add_test(NAME TestCMakeConfig COMMAND test_configure_file)
@@ -40,4 +40,4 @@ do_lexer_test(5)
 do_lexer_test(6)
 
 add_test(NAME TestParser COMMAND test_parser)
-set_tests_properties(TestCMakeConfig PROPERTIES PASS_REGULAR_EXPRESSION "success.*success")
+set_tests_properties(TestParser PROPERTIES PASS_REGULAR_EXPRESSION "success.*success")
