--- a/ast/CMakeLists.txt
+++ b/ast/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(ast node.cpp program.cpp)
-target_include_directories(lexer INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ast INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
