separate expression and statement definition

--- a/ast/CMakeLists.txt
+++ b/ast/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_library(ast node.cpp program.cpp)
+file(GLOB_RECURSE src_files *.cpp *.c)
+add_library(ast ${src_files})
 target_include_directories(ast INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
