--- a/lexer/CMakeLists.txt
+++ b/lexer/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_library(lexer lexer.cpp token.cpp)
+file(GLOB_RECURSE src_files *.cpp *.c)
+add_library(lexer ${src_files})
 target_include_directories(lexer INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
