--- a/parser/CMakeLists.txt
+++ b/parser/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_library(parser parser.cpp)
+file(GLOB_RECURSE src_files *.cpp *.c)
+add_library(parser ${src_files})
 target_include_directories(parser INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
